Fixed overflow to right

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,12 @@
   --nav-font: "Dancing Script", cursive;
 }
 
+html {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 nav ul {
   padding: 0;
   margin: 0;
@@ -33,6 +39,7 @@ nav h2 {
   font-family: var(--nav-font);
   font-size: 40px;
   font-weight: bold;
+  padding-top: 20px;
 }
 
 .navigation-container {
@@ -189,6 +196,10 @@ footer {
 }
 
 @media (max-width: 968px) {
+  body {
+    overflow-x: hidden;
+  }
+
   .hero h1 {
     font-size: 30px;
     padding-top: 10px;
@@ -212,7 +223,7 @@ footer {
   }
 
   .hero {
-    padding-right: 30px;
+    padding-right: 20px;
   }
 
   .hero-container {
